chore(test): add test env & example API test
- Introduce 'test' environment in Docker Compose and Makefile setup
- Add Dockerfile.test and .env.test.example
- Update pom.xml to include testing dependencies
- Add UserControllerTest to unit test getAllUsers